Bug 152896 - FILEOPEN DOCX fontwork with scheme color and transparency has wrong shading
Summary: FILEOPEN DOCX fontwork with scheme color and transparency has wrong shading
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-05 23:52 UTC by Regina Henschel
Modified: 2023-01-06 18:21 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example with scheme color and transparency (37.54 KB, application/zip)
2023-01-05 23:52 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2023-01-05 23:52:34 UTC
Created attachment 184499 [details]
Example with scheme color and transparency

This is a follow-up bug report to bug 125884.

Open attached file in Word and in Writer and compare the color of the Fontwork shape with the text color of the image below it.
The colors are the same in Word but different in Writer.

Reason is, that in case of transparency, Word writes the w14:textFill element in addition to the w:color element, because w:color is not able to express transparency. So there exists a w14:lumMod element in w14:textFill and a w:themeShade attribute in w:color. The rule is, that a w14:textFill element supersedes the w:color element. But the current implementation applies both w:themeShade and w14:lumMod. Thus the color is too dark.

To test the document you need a current daily build.
Comment 1 Commit Notification 2023-01-06 17:54:01 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/81e6d47635656297cdddc9030f4422c0bcc203f9

tdf#152896 do not apply color shading twice

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.